--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ before_install:
   - sudo mv arduino-1.6.5 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
 install:
-  - arduino --install-boards arduino:avr:uno
-  - arduino --install-library Servo
-  - arduino --install-library Wire
+  - arduino --install-boards arduino:avr:uno:1.6.20
 script:
   - arduino --board arduino:avr:uno --verify $PWD/examples/Arduino/Arduino.ino
