--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,5 @@ before_install:
   - tar xf arduino-1.6.5-linux64.tar.xz
   - sudo mv arduino-1.6.5 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
-install:
-  - arduino --install-boards arduino:avr:uno:1.6.20
 script:
-  - arduino --board arduino:avr:uno --verify $PWD/examples/Arduino/Arduino.ino
+  - arduino --board arduino:avr:uno --verify $PWD/Arduino/Arduino.ino
